--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls.css
@@ -393,7 +393,7 @@
 }
 
 .customize-control.customize-control-ast-color-group .customize-control-title {
-  margin-bottom: 0;
+  margin-bottom: 5px;
 }
 
 .customize-control.customize-control-ast-color-group .ast-field-color-group-wrap {
@@ -417,7 +417,7 @@
 
 .customize-control.customize-control-ast-color-group .ast-color-group-reset {
   right: 72px;
-  top: 7px;
+  top: 6px;
   cursor: pointer;
 }
 
@@ -433,7 +433,7 @@
 .customize-control.customize-control-ast-color-group .ast-responsive-btns {
   position: absolute;
   right: 100px;
-  top: 10px;
+  top: 9px;
 }
 
 .customize-control.customize-control-ast-color-group .ast-bg-img-remove.components-button.is-link {
